fixed border radius and white space around Spotify widget

--- a/style.css
+++ b/style.css
@@ -50,3 +50,8 @@ p a {
     margin: 0;
 }
 
+footer {
+    margin-top: 0;
+    padding: 30px 0;
+}
+
